URL Formatter: Exclude private registries in trivial subdomain stripping

Previously, the URL formatter on "www.blogspot.com" would refuse to
strip "www", as "blogspot.com" was interpreted as the private registry,
and "www" was interpreted as the domain name.

Now we exclude private registry entries. This should be harmless, as
we still only strip "m" and "www" domains from private registries.

Bug: 759865
Change-Id: Ibd176c6d3aa6b64391cfc112211613233c78f5f6
Reviewed-on: https://chromium-review.googlesource.com/644491
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498657}
Former-commit-id: 14b83d2a1be977527aec9136fbd65f8e7d02436f